force-app/main/default/objects/Insurance_Quote__c/Insurance_Quote__c.object-meta.xml
<CustomObject>
    <description>Object is used to track Insurance Quotes and Census data from Hippo through the HI Quote staging object.</description>
    <label>Insurance Quote</label>
    <nameField>
        <displayFormat>InsQuote-{0000000}</displayFormat>
        <label>Insurance Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>