force-app/main/default/objects/Insurance_Quote__c/fields/Census_Link__c.field-meta.xml
<CustomField>
    <fullName>Census_Link__c</fullName>
    <description>Url link to this Census.</description>
    <label>Census Link</label>
    <type>Url</type>
</CustomField>