force-app/main/default/objects/Insurance_Quote__c/fields/Date_Quote_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Quote_Sent__c</fullName>
    <description>Date the Quote was sent to the Customer.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Quote Sent</label>
    <type>DateTime</type>
</CustomField>