force-app/main/default/objects/Insurance_Quote__c/fields/Error_Text__c.field-meta.xml
<CustomField>
    <fullName>Error_Text__c</fullName>
    <description>Error text for insurance quote.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>